--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body{
+  background-color: rgb(230, 99, 110);
+}
+
+h1{
+  text-align: center;
+}
+
+.keys{
+  display: flex;
+  justify-content: space-around;
+}
+
+footer{
+
+}
