--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
     <span class="sound">clap</span>
   </div>
 
-  <div data-key="83g" class="key">
+  <div data-key="83" class="key">
     <kbd>S</kbd>
     <span class="sound">hihat</span>
   </div>
